<resources>
    <string name="app_name">Amusing Museum</string>
    <string name="facebook_app_id" translatable="false">1610003522657300</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_start_game">Start Game</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="btnMenuNewGame">New Game</string>
    <string name="btnMenuAbout">About</string>
    <string name="btnMenuHelp">Help</string>
    <string name="btnMenuExit">Exit</string>
    <string name="btnContinue">Continue</string>
    <string name="Help">HELP</string>
    <string name="btnOK">OK</string>
    <string name="Quit">Exit</string>
    <string name="confirm_exit_small">EXIT</string>
    <string name="confirm_exit_large">Are you sure that you want to close the application?</string>
    <string name="confirm_exit_cancel">Cancel</string>
    <string name="confirm_exit_οκ">OK</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="hangman_correct_is">The right word is:</string>
    <string name="upload_score_info">Upload your score</string>
    <string name="upload_score_name">Name:</string>
    <string name="upload_score_num">Score:</string>
    <string name="upload_score_upload">Upload</string>
    <string name="upload_empty_name_small">Empty Name</string>
    <string name="upload_empty_name_large">Please enter a name</string>
    <string name="upload_complaints">Complaints:</string>
    <string name="upload_complaints_send">Sending of complaints</string>
    <string name="empty_field">Empty Field</string>
    <string name="empty_field_large">Please send any complaints or whatever you want to highlight during your tour</string>
    <string name="error">Error!</string>
    <string name="error_on_upload_name_used">Name is already in use, please try with a different name </string>
    <string name="error_no_internet_connection_large">You are not connected to the internet</string>
    <string name="error_try_later_large">Please try again later</string>
    <string name="score_successfully_uploaded">The score was successfully uploaded</string>
    <string name="upload_complaint_sent">The text has been successfully sent</string>
    <string name="save_score_locally_button_text">Save locally</string>
    <string name="save_score_locally_successfully">Data saved locally</string>
    <string name="upload_locally_no_saved_data_found">No saved data found</string>
    <string name="upload_locally_already_saved">Your score has already been saved</string>
    <string name="download_and_play_with_other_museums">Download and play with other museums</string>
    <string name="upload_previously_saved_score">Upload the score that you have saved previously</string>
    <string name="download_change_museum_confirm">New museum downloaded. Play with new museum?</string>
    <string name="download_switch_to_mbp">Switch to Museum Of Byzantine Culture Of Thessaloniki</string>
    <string name="new_museum">New museum</string>
    <string name="Number">Number</string>
    <string name="Name">Name</string>
    <string name="title_activity_fullscreen_activity_room2">FullscreenActivityRoom2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_next">Next</string>
    <string name="museum_title">MUSEUM OF BYZANTINE CULTURE OF THESSALONIKI</string>
    <string name="museum_discription">
        1. EARLY CHRISTIAN CHURCH\n
        2. EARLY CHRISTIAN CITY AND DWELLING\n
        3. FROM THE ELYSIAN FIELDS TO THE CHRISTIAN PARADISE\n
        4. FROM ICONOCLASM TO THE SPLENDOUR OF THE MACEDONIAN AND KOMNENIAN DYNASTIES\n
        5. THE DYNASTIES OF BYZANTINE EMPERORS\n
        6. BYZANTINE CASTLE\n
        7. THE TWILIGHT OF BYZANTIUM\n
        8-9. DONATIONS OF COLLECTIONS\n
        10. THE BYZANTINE LEGACY IN THE YEARS AFTER THE FALL\n
        11. DISCOVERING THE PAST\n
    </string>
    <string name="alpha">Α</string>
    <string name="beta">Β</string>
    <string name="gama">Γ</string>
    <string name="delta">Δ</string>
    <string name="epsilon">Ε</string>
    <string name="zeta">Ζ</string>
    <string name="eta">Η</string>
    <string name="theta">Θ</string>
    <string name="giota">Ι</string>
    <string name="kapa">Κ</string>
    <string name="lampda">Λ</string>
    <string name="mi">Μ</string>
    <string name="ni">Ν</string>
    <string name="ksi">Ξ</string>
    <string name="omikron">Ο</string>
    <string name="pi">Π</string>
    <string name="ro">Ρ</string>
    <string name="sigma">Σ</string>
    <string name="taf">Τ</string>
    <string name="ypsilon">Υ</string>
    <string name="fi">Φ</string>
    <string name="xi">Χ</string>
    <string name="psi">Ψ</string>
    <string name="omega">Ω</string>
    <string name="underscore">_</string>
    <string-array name="words">
        <item>ΚΩΝΣΤΑΝΤΙΝΟΥ</item>
        <item>ΑΡΜΕΝΟΠΟΥΛΟΥ</item>
        <item>ΚΡΙΤΟΥ</item>
        <item>ΘΕΣΣΑΛΟΝΙΚΗΣ</item>
        <item>ΠΡΟΧΕΙΡΟΝ</item>
        <item>ΛΕΓΟΜΕΝΟΝ</item>
        <item>ΕΞΑΒΙΒΛΟΣ</item>
        <item>ΕΙΣ</item>
        <item>ΚΟΙΝΗΝ</item>
        <item>ΓΛΩΣΣΑΝ</item>
        <item>ΜΕΤΑΦΡΑΣΘΕΙΣΑ</item>
        <item>ΔΙΟΡΘΩΘΕΙΣΑ</item>
        <item>ΕΚΤΕΘΕΙΣΑ</item>
        <item>ΚΑΤΑ</item>
        <item>ΥΦΟΣ</item>
        <item>ΝΟΗΜΑ</item>
        <item>ΠΡΩΤΟΤΥΠΟΥ</item>
        <item>ΕΛΛΗΝΙΚΗΣ</item>
        <item>ΠΑΡΑ</item>
        <item>ΑΛΕΞΙΟΥ</item>
        <item>ΣΠΑΝΟΥ</item>
        <item>ΙΩΑΝΝΙΝΩΝ</item>
        <item>ΕΓΧΕΙΡΙΔΙΟ</item>
        <item>ΠΡΟΣΕΤΕΘΗ</item>
        <item>ΑΛΦΑΒΗΤΟΝ</item>
        <item>ΠΡΟΤΡΟΠΗ</item>
        <item>ΔΑΠΑΝΗ</item>
        <item>ΠΑΝΙΕΡΩΤΑΤΟΥ</item>
        <item>ΣΕΒΑΣΜΙΟΤΑΤΟΥ</item>
        <item>ΜΗΤΡΟΠΟΛΙΤΟΥ</item>
        <item>ΗΡΑΚΛΕΙΑΣ</item>
        <item>ΓΕΡΑΣΙΜΟΥ</item>
        <item>ΑΝΑΛΩΜΑΣΙ</item>
        <item>ΠΡΩΤΟΝ</item>
        <item>ΤΕΤΥΠΩΤΑΙ</item>
    </string-array>
    <string-array name="monument_names">
        <item>ANGELOKASTRO</item>
        <item>AMPHIPOLI</item>
        <item>SERVIA</item>
        <item>PHILIPPI</item>
        <item>MOGLENA</item>
        <item>SERRES</item>
        <item>PLATAMON</item>
        <item>ANAKTOROUPOLI</item>
        <item>THESSALONIKI</item>
        <item>ANASTASSIOUPOLI</item>
        <item>GYNEKOKASTRO</item>
        <item>KOUMOUTZINA</item>
        <item>SIDEROKASTRO</item>
        <item>GRATINE</item>
        <item>RENTINA</item>
        <item>DIDYMOTEICHO</item>
        <item>PYTHIO</item>
    </string-array>
    <string-array name="monument_images_filenames">
        <item>monument_aggelokastro</item>
        <item>monument_amfipoli</item>
        <item>monument_servia</item>
        <item>monument_filippoi</item>
        <item>monument_moglena</item>
        <item>monument_serres</item>
        <item>monument_platamonas</item>
        <item>monument_anaktoroupoli</item>
        <item>monument_thessaloniki</item>
        <item>monument_anastasioupoli</item>
        <item>monument_gynaikokastro</item>
        <item>monument_koumoutzina</item>
        <item>monument_sidirokastro</item>
        <item>monument_gratini</item>
        <item>monument_rentina</item>
        <item>monument_didimoteixo</item>
        <item>monument_pithio</item>
    </string-array>
    <string name="title">Questions-Answers</string>
    <string name="rightAnswer">Correct !</string>
    <string name="wrongAnswer">Wrong !</string>
    <string name="correct_is">The right is:</string>
    <string name="result">Result</string>
    <string name="correct_answers_num">Number of correct answers</string>
    <string name="question">Question</string>
    <string name="from">from 3</string>
    <string name="qrcode">QR Code</string>
    <string-array name="Questions">
        <item>Centuries otherwise called as Early Christian period:</item>
        <item>Capital of the Byzantine empire:</item>
        <item>Year of foundation of Constantinople by Constantine the Great:</item>
        <item>The triclinium was:</item>
        <item>The amphoras were used in houses as:</item>
        <item>The most widespread garment in the Eastern Mediterranean, the tunic, was not manufactured by:</item>
        <item>According to Roman tradition the Elysian Fields was the final destination of the souls of:</item>
        <item>Which of the following symbols is not Christian:</item>
        <item>What information someone is not waiting to find on an inscription:</item>
        <item>The Middle Byzantine period comprises the centuries:</item>
        <item>Pilgrim ampullae of lead were used by pilgrims to carry:</item>
        <item>Name of the Christians who were against the depiction of sacred symbols:</item>
        <item>Heraclius was emperor of Byzantium from 610 until 641 AD:</item>
        <item>Name of the gold coin introduced by Constantine the Great:</item>
        <item>Alexius I Komnenus (1081-1118) introduced a new gold coin, named:</item>
        <item>Emperor who re-founds the castle of Rendina and he strengthens its fortifications:</item>
        <item>Part of the castle situated high which serves for the patrols of soldiers :</item>
        <item>In which of the following locations a castle will not be built:</item>

        <item>In the Early Christian era cookware was the:</item>
        <item>Year that Theodosius divides the Roman Empire in the East and West part: </item>
        <item>Emperor who defined Christianity as the official religion of the Roman Empire:</item>
        <item>During the Byzantine period the plate was the equivalent of today:</item>
        <item>The oil lamp in the Byzantine period was used for:</item>
        <item>According to the decree of Milan in 313 AD, every citizen believed (in):</item>
        <item>Emperor who admired Greek culture and tried to restore the Roman Empire to the National Religion: </item>
        <item>The terms “Byzantium” and “Byzantine” were used for the first time for the whole empire and its inhabitants by Western historians in:</item>
        <item>Leo III, the Isaurian (Emperor 717 - 741 AD), for the better management of the empire dived, it into:</item>
        <item>A woman in Byzantium could marry from the age of:</item>
        <item>The “Solidarity Act” (996 AD) was a decree of the Emperor:</item>
        <item>Battle in which Romanos IV Diogenes was defeated, captured and released after paying ransoms:</item>
        <item>Year of the conquest of Constantinople by the Ottomans:</item>
        <item>Emperor who abolished the Olympic Games:</item>
        <item>Symbol of the Byzantine Empire :</item>
        <item>The name of the Ottoman soldier:</item>
    </string-array>
    <string name="title_activity_insert_code">Type the code of the artefact </string>
</resources>