<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.asus_s550cb.theo.museum.menu"
    android:background="@color/royal_blue">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pause_icon_v2"
            android:layout_weight="2"
            />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="pauseButtonOnClick">

                <Button
                    android:id="@+id/btnContinue"
                    android:text="@string/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_design"
                    android:layout_margin="5dp"
                    android:onClick="pauseButtonOnClick"/>

                <Button
                    android:id="@+id/btnHelp"
                    android:text="@string/btnMenuHelp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_design"
                    android:layout_margin="5dp"
                    android:onClick="pauseButtonOnClick"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <Button
                    android:id="@+id/btnAbout"
                    android:text="@string/btnMenuAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_design"
                    android:layout_margin="5dp"
                    android:onClick="pauseButtonOnClick"/>

                <Button
                    android:id="@+id/btnExit"
                    android:text="@string/btnMenuExit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_design"
                    android:layout_margin="5dp"
                    android:onClick="pauseButtonOnClick"/>

            </TableRow>


        </TableLayout>




   </LinearLayout>

</RelativeLayout>
