<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CodeActivity"
    android:background="@color/royal_blue"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_insert_code"
        android:id="@+id/textView6"
        android:textSize="25dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/numCode"
        android:layout_gravity="center_horizontal"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textCapCharacters" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/btnOK"
            android:id="@+id/button_num_code_Ok"
            android:background="@drawable/button_design"
            android:layout_margin="10dp"
            android:onClick="buttonOnclick"
            android:textStyle="bold" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/btnMenuExit"
            android:id="@+id/button_num_code_Back"
            android:background="@drawable/button_design"
            android:layout_margin="10dp"
            android:onClick="buttonOnclick"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
