<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.asus_s550cb.theo.museum.menu"
    android:background="@color/royal_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            android:layout_weight="2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="@string/btnMenuNewGame"
                android:id="@+id/btnMenuNewGame"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_design"
                android:textStyle="bold"
                android:onClick="ButtonOnClick"
                android:textSize="15dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:text="@string/btnMenuHelp"
                android:id="@+id/btnMenuHelp"
                android:background="@drawable/button_design"
                android:layout_below="@+id/btnMenuNewGame"
                android:layout_alignLeft="@+id/btnMenuNewGame"
                android:layout_alignStart="@+id/btnMenuNewGame"
                android:textStyle="bold"
                android:onClick="ButtonOnClick"
                android:textSize="15dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMenuAbout"
                android:id="@+id/btnMenuAbout"
                android:layout_below="@+id/btnMenuHelp"
                android:layout_alignLeft="@+id/btnMenuHelp"
                android:layout_alignStart="@+id/btnMenuHelp"
                android:background="@drawable/button_design"
                android:textStyle="bold"
                android:onClick="ButtonOnClick"

                android:textSize="15dp"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:id="@+id/btnMenuExit"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_design"
                android:textStyle="bold"
                android:onClick="ButtonOnClick"

                android:layout_margin="10dp"
                android:text="@string/btnMenuExit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">




            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/elflag"
                android:src="@drawable/el"
                android:onClick="changeLanguage"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ukflag"
                android:src="@drawable/uk"
                android:onClick="changeLanguage"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
